--- a/color_game.css
+++ b/color_game.css
@@ -1,16 +1,29 @@
 body {
   background: #232323;
+  margin: 0;
+  font-family: "Montserrat", "Avenir";
 }
 
 .container {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 20px auto;
+
 }
 
 h1 {
   color: white;
+  text-align: center;
+  background: steelblue;
+  margin: 0;
+  font-weight: normal;
+  text-transform: uppercase;
+  line-height: 1.2;
+  padding: 20px 0;
 }
 
+#color-display {
+  font-size: 2em;
+}
 
 .square {
   width: 30%;
@@ -18,10 +31,44 @@ h1 {
   padding-bottom: 30%;
   float: left;
   margin: 1.66%;
+  border-radius: 50%;
+  transition: background .6s;
+  --webkit-transition: background .6s;
+  --moz-transition: background .6s;
 }
 
 #stripe {
   background: white;
   height: 30px;
   text-align: center;
+}
+
+.selected {
+  background: steelblue;
+  color: white;
+}
+
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  height: 100%;
+  font-weight: 700;
+  color: steelblue;
+  font-size: inherit;
+  letter-spacing: 2px;
+  transition: all .3s;
+  --webkit-transition: all .3s;
+  --moz-transition: all .3s;
+  outline: none;
+}
+
+button:hover {
+  color: white;
+  background: steelblue;
+}
+
+#message {
+  display: inline-block;
+  width: 20%;
 }
