--- a/color_game.css
+++ b/color_game.css
@@ -24,6 +24,8 @@ button {
   color: steelblue;
   font-size: inherit;
   letter-spacing: 2px;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
   transition: all .3s;
   --webkit-transition: all .3s;
   --moz-transition: all .3s;
@@ -47,6 +49,8 @@ button:hover {
   float: left;
   margin: 1.66%;
   border-radius: 50%;
+  -webkit-transition: background .6s;
+  -o-transition: background .6s;
   transition: background .6s;
   --webkit-transition: background .6s;
   --moz-transition: background .6s;
@@ -72,4 +76,17 @@ button:hover {
 #message {
   display: inline-block;
   width: 20%;
+}
+
+.info {
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
+}
+
+.info > a {
+  color: white;
+  font-size: 2.5rem;
+  margin: 10px;
+  text-decoration: none;
 }
